feat: list certs
